fix(subnav): apply position relative to activate z-index

--- a/src/components/Subnav/subnav.css
+++ b/src/components/Subnav/subnav.css
@@ -1,5 +1,6 @@
 :host {
   display: block;
+  position: relative;
   z-index: var(--sgds-z-index-raised);
 }
 
